# conus404_metadata

./: README.md  code.json  pyproject.toml  version.py
auxhist24_overrides/: README.md  auxhist24_notes_overrides.txt
metadata_output_files/: README.md  wrfout_metadata.csv
notebooks/: CONUS404 - merge USGS metadata with NCAR.ipynb  CONUS404_get_auxhist_metadata.ipynb  CONUS404_get_wrfout_metadata.ipynb  CONUS404_get_wrfxtrm_metadata.ipynb  README.md  wrf_wordmap_work.ipynb
wrfout_overrides/: README.md  wrfout_units_overrides.txt
wrfxtrm_overrides/: README.md
