[build-system]
requires = ["setuptools>=61"]   # , "setuptools-scm", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "conus404_metadata"
description = "CONUS404 metadata and supporting utilities"
readme = "README.md"
dynamic = ["version"]
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [{name = "Parker Norton", email = "pnorton@usgs.gov"}, ]
maintainers = [{name = "Parker Norton", email = "pnorton@usgs.gov"}, ]
keywords = ["CONUS404", "HyTEST"]
classifiers = ["Development Status :: 3 - Alpha",
               "Programming Language :: Python :: 3", ]

dependencies = ["pandas",
    "pyproj",
    "xarray", ]

[project.urls]
Repository = "https://github.com/hytest-org/conus404_metadata.git"